# Raisfeld_Encrypter

./: LICENSE.txt  README.md  Raisfeld encrypter.spec  compile.py  dependencies.py  start.py  testing.py
.github/workflows/: CI.yml
gui/: README.md  create_account.ui  global.qrc  global.qss  loading.ui  login_page.ui  main_page.ui  vault_creation.ui
raisfeld-encrypter-website/: README.md  package-lock.json  package.json  svelte.config.js
raisfeld-encrypter-website/src/routes/: +layout.js  +layout.svelte  +page.svelte  Header.svelte  styles.css
raisfeld-encrypter-website/src/routes/about/: +page.svelte
raisfeld-encrypter-website/src/routes/download/: +page.svelte
raisfeld-encrypter-website/src/routes/next/: +page.svelte
rust_src/fast_fs/: Cargo.toml
rust_src/fast_fs/src/: lib.rs
rust_src/fs/: Cargo.toml  pyproject.toml
rust_src/fs/src/: lib.rs
src/: User.py  encryption.py  fs.py  main.py
src/gui/: WARNING.md  crate_account.py  create_account.py  loading.py  login_page.py  main_page.py  vault_creation.py
src/pages/: create_account.py  loading.py  login_page.py  main_page.py  vault_creation.py
windows venv/: pyvenv.cfg
