[package]
name = "fast_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_fs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
tokio = {version = "*",features = ["full"]}
pyo3-asyncio = {version = "*", features = ["tokio", "tokio-runtime", "attributes"]}